Fix alignment in task list in main navigation

--- a/static/static/css/main.css
+++ b/static/static/css/main.css
@@ -2,8 +2,9 @@ body {
     padding-top: 1em;
 }
 
-.main-navigation .status {
+.main-navigation .status-icon {
     display: inline-block;
+    text-align: center;
     min-width: 1em;
 }
 
